[gd_scene load_steps=2 format=3 uid="uid://btgqdgdaciqub"]

[ext_resource type="Script" path="res://gameplay/combat/weapons_detection/target_detector.gd" id="1_jxbpi"]

[node name="TargetDetector" type="Area3D"]
script = ExtResource("1_jxbpi")
detect_factions = Array[int]([0])

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
